--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,8 +1,12 @@
-<%= form_tag('/') do %>
-  <%= select_tag "crypto", options_for_select(@array), class: 'form-control'%>
-  <%= submit_tag "Valider", class: "btn btn-large btn-primary" %>
-<% end %>
+<h1>Tu veux faire du biff, du du du biff ? <br /> <span>Checke ici le cours de la <span id="crypto">cryptomonnaie</span> de ton choix !</span></h1>
+
+<div class="formulaire">
+  <%= form_tag('/') do %>
+    <%= select_tag "crypto", options_for_select(@array), class: 'form-control'%>
+    <%= submit_tag "Valider", class: "btn btn-outline-info" %>
+  <% end %>
+</div>
 
 <% if @name %>
-  <h2><%= @name %> : <%= @rate %></h2>
+  <h6>Le cours actuel de la monnaie <span id="name"><%= @name %> </span> est de <span id="rate"><%= @rate %></span></h6>
 <% end %>
