--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -3,7 +3,7 @@
 <div class="formulaire">
   <%= form_tag('/') do %>
     <%= select_tag "crypto", options_for_select(@array), class: 'form-control'%>
-    <%= submit_tag "Valider", class: "btn btn-outline-info" %>
+    <%= submit_tag "Valider", class: "btn btn-outline-success" %>
   <% end %>
 </div>
 
